# goldilocks

./: .gitignore  Cargo.toml  DOCKERFILE  README.md  package.json  vercel.json
.github/workflows/: deploy.yml
.svelte-kit/: ambient.d.ts
api/: Cargo.toml
api/v1/: weather.rs
backend/: Cargo.toml  package-lock.json  package.json  schema.sql  wrangler.toml
backend/src/: lib.rs  locations.rs  main.rs
backend/static/: locations_nested.json
backend_backup/: Cargo.toml
backend_backup/src/: lib.rs  rocket.rs
backend_backup/static/: locations_flat.json
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  package.json  trunk.toml
frontend/src/: main.rs
functions/: Cargo.toml
functions/src/: lib.rs
