[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version ="1.0.154", features = ["derive"]}
yew = { version = "0.20", features = ["csr"] }
serde_json = "1.0"
wasm-logger = "0.2.0"
log = "0.4.6"
wasm-bindgen-futures = "0.4"
gloo-net = "0.2"

common= { path = "../common" }
tokio = "1.26.0"
